--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,12 @@ img{
     max-width: 33.33%;
     padding: 0 15px;
 }
+.custom_col_4 {
+    -ms-flex: 0 0 25%;
+    flex: 0 0 25%;
+    max-width: 25%;
+    padding: 0 15px;
+}
 .custom_col_6 {
     -ms-flex: 0 0 50%;
     flex: 0 0 50%;
