--- a/css/style_d.css
+++ b/css/style_d.css
@@ -154,15 +154,40 @@ header.site_header.top_page_header {
 /* NEWS : END */
 
 /* BUSINESS : START */
+.busniess_section {
+    overflow: hidden;
+}
 .busniess_section .custom_container {
     width: 100%;
-    max-width: 1100px;
+    max-width: 1130px;
     margin: auto;
     padding: 0 15px;
 }
 .busniess_box .busniess_box_content {
     border: 4px solid #d9b341;
     padding: 45px;
+    position: relative;
+    background-color: #fff;
+    margin-bottom: 50px;
+}
+.busniess_box.busniess_real_estate_box {
+    margin-bottom: 100px;
+}
+.busniess_box .busniess_box_content:before {
+    content: '';
+    position: absolute;
+    top: 50px;
+    left: 50px;
+    right: -50px;
+    bottom: -50px;
+    background-color: #060d62;
+    z-index: -1;
+}
+.busniess_box.busniess_management_box .busniess_box_content:before {
+    top: 50px;
+    left: -50px;
+    right: 50px;
+    bottom: -50px;
 }
 .busniess_box .custom_row {
     align-items: center;
@@ -178,7 +203,7 @@ header.site_header.top_page_header {
 }
 .busniess_image_box {
     position: relative;
-    padding-top: 60%;
+    padding-top: 65%;
     overflow: hidden;
 }
 .busniess_image_box img {
@@ -197,4 +222,41 @@ header.site_header.top_page_header {
 .busniess_management_box .busniess_image_box img {
     object-position: center left;
 }
+.busniess_box h3 {
+    text-align: center;
+    color: #060d62;
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 10px;
+    line-height: 48px;
+}
+.busniess_box p {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    color: #000;
+}
+.busniess_box a {
+    width: 100%;
+    max-width: 250px;
+    margin: 10px auto 0;
+    display: block;
+    text-align: center;
+    height: 60px;
+    line-height: 60px;
+    border: 1px solid #070069;
+    font-size: 18px;
+    color: #000;
+}
+.busniess_box a span {
+    color: #d9b341;
+    margin-right: 12px;
+}
 /* BUSINESS : END */
+
+/* TTRANDING : END */
+.trading_section {
+    padding: 100px 0;
+}
+
+/* TTRANDING : END */
