--- a/css/style_d.css
+++ b/css/style_d.css
@@ -1,7 +1,7 @@
 .custom_row_reverse {
     flex-direction: row-reverse;
 }
-/* HEADER : START */
+/* header section css end */
 main.main.top_page_header {
     padding-top: 0;
 }
@@ -12,9 +12,9 @@ header.site_header.top_page_header {
     right: 0;
     bottom: 0;
 }
-/* HEADER : END */
+/* header section css end */
 
-/* BANNER : START */
+/*banner section css start*/
 .banner_section {
     background-image: url('../images/banner_image.png');
     background-position: center;
@@ -40,16 +40,18 @@ header.site_header.top_page_header {
     color: #fff;
     line-height: 68px;
     margin-bottom: 30px;
+    text-shadow: 15px 15px 20px rgb(0, 0, 0, 0.9);
 }
 .banner_section p {
     font-size: 40px;
     font-weight: 500;
     color: #fff;
-    line-height: 68px;
+    line-height: 45px;
+    text-shadow: 15px 15px 20px rgb(0, 0, 0, 0.9);
 }
-/* BANNER : END */
+/*banner section css end*/
 
-/* NEWS : START */
+/*news section css start*/
 .news_section {
     padding: 100px 0;
 }
@@ -138,7 +140,7 @@ header.site_header.top_page_header {
     color: #000;
 }
 .news_section .news_content .news_table_th p {
-    min-width: 110px;
+    padding-right: 20px;
 }
 .news_section .news_content .news_content_inner .news_content_text a {
     width: 100%;
@@ -151,7 +153,11 @@ header.site_header.top_page_header {
     color: #fff;
     font-size: 20px;
 }
-/* NEWS : END */
+.news_section .news_content .news_content_inner .news_content_text a span {
+    color: #060d62;
+    margin-right: 10px;
+}
+/*news section css end*/
 
 /* BUSINESS : START */
 .busniess_section {
@@ -170,7 +176,7 @@ header.site_header.top_page_header {
     background-color: #fff;
     margin-bottom: 50px;
 }
-.busniess_box.busniess_real_estate_box {
+.busniess_box.busniess_real_estate_box .busniess_box_content {
     margin-bottom: 100px;
 }
 .busniess_box .busniess_box_content:before {
@@ -194,12 +200,12 @@ header.site_header.top_page_header {
     margin: 0;
 }
 .busniess_box .custom_col_image {
-    flex: 0 0 500px;
-    max-width: 500px;
+    flex: 0 0 534px;
+    max-width: 534px;
 }
 .busniess_box .custom_col_text {
-    flex: 0 0 calc(100% - 500px);
-    max-width: calc(100% - 500px);
+    flex: 0 0 calc(100% - 534px);
+    max-width: calc(100% - 534px);
 }
 .busniess_image_box {
     position: relative;
@@ -254,9 +260,315 @@ header.site_header.top_page_header {
 }
 /* BUSINESS : END */
 
-/* TTRANDING : END */
+/* TRADING : END */
 .trading_section {
     padding: 100px 0;
 }
+.trading_section .custom_container {
+    max-width: 1130px;
+}
+.trading_content {
+    padding: 46px 0 32px;
+    background-image: url(../images/news_bg_image.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border: 4px solid #d9b341;
+}
+.trading_content .custom_col_4 {
+    display: flex;
+    margin-bottom: 30px;
+}
+.trading_content .trading_box {
+    width: 100%;
+    border: 4px solid #d9b341;
+    background-color: #fff;
+    overflow: hidden;
+}
+.trading_content .trading_box .trading_image {
+    position: relative;
+    padding-top: 110.8%;
+    overflow: hidden;
+    margin: 10px 18px;
+}
+.trading_content .trading_box .trading_image img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    max-width: 100%;
+    max-height: 100%;
+    min-width: 100%;
+    min-height: 100%;
+    object-fit: cover;
+}
+.trading_content .trading_box .trading_text {
+    min-height: 44px;
+    background-color: #d9b341;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    padding: 2px 0px;
+}
+.trading_content .trading_box .trading_text p {
+    font-size: 16px;
+    text-align: center;
+    color: #fff;
+    line-height: 20px;
+    font-weight: 500;
+}
+.trading_content a {
+    display: block;
+    text-align: center;
+    color: #000;
+    width: 100%;
+    max-width: 300px;
+    margin: auto;
+    height: 50px;
+    border: 1px solid #fff;
+    line-height: 50px;
+    background-color: #d9b341;
+    font-weight: 500;
+    font-size: 18px;
+}
+.trading_content a span {
+    color: #060d62;
+}
+/* TRADING : END */
 
-/* TTRANDING : END */
+/* CONTACT : START */
+.contact_section .howto-contact-content .content-bx {
+    background-color: #fff;
+}
+.contact_section .howto-contact-content {
+    padding-bottom: 37px;
+}
+/* CONTACT : END */
+
+/******************************************** RESPONSIVE ********************************************/
+@media(max-width: 1166px) {
+    /*grid css*/
+    .custom_col_4 {
+        -ms-flex: 0 0 50%;
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+    /*custon container css*/
+    .trading_section .custom_container,
+    .busniess_section .custom_container,
+    .banner_section .custom_container {
+        max-width: 900px;
+    }
+    /*banner section css start*/
+    .banner_section {
+        padding-bottom: 80px;
+    }
+    .banner_section h1 {
+        font-size: 48px;
+        line-height: 55px;
+        margin-bottom: 20px;
+    }
+    .banner_section p {
+        font-size: 28px;
+        line-height: 36px;
+    }
+    /*banner section css end*/
+    /*news section css end*/
+    .trading_section,
+    .news_section {
+        padding: 60px 0;
+    }
+    .news_section .news_content {
+        padding: 30px 15px;
+    }
+    .news_section .news_content .news_content_inner {
+        max-width: 800px;
+        padding: 20px 15px;
+    }
+    .news_section .news_content .news_content_inner .news_content_text {
+        max-width: 720px;
+        padding: 10px 20px;
+    }
+    .news_section .news_content .news_table p {
+        font-size: 18px;
+        line-height: 28px;
+    }
+    .news_section .news_content .news_table_th p {
+        padding-right: 15px;
+    }
+    .news_section .news_content .news_content_inner .news_content_text a {
+        max-width: 180px;
+        height: 40px;
+        line-height: 40px;
+        font-size: 18px;
+    }
+    /*news section css end*/
+    /*busniess section css end*/
+    .busniess_box .busniess_box_content {
+        padding: 30px;
+    }
+    .busniess_box .custom_col_image{
+        flex: 0 0 386px;
+        max-width: 386px;
+    }
+    .busniess_box .custom_col_text {
+        flex: 0 0 calc(100% - 386px);
+        max-width: calc(100% - 386px);
+    }
+    .busniess_box .custom_col_text .busniess_image_text {
+        padding-top: 20px;
+    }
+    .busniess_box h3 {
+        font-size: 24px;
+        margin-bottom: 5px;
+        line-height: 38px;
+    }
+    .busniess_box p {
+        font-size: 16px;
+        line-height: 30px;
+    }
+    .busniess_box a {
+        max-width: 220px;
+        margin: 10px auto 0;
+        height: 50px;
+        line-height: 50px;
+        font-size: 16px;
+    }
+    /*busniess section css end*/
+    /*trading section css start*/
+
+    .trading_content {
+        padding: 30px 0;
+    }
+    /*trading section css end*/
+}
+@media(max-width: 900px) {
+    /*banner section css start*/
+    .banner_section h1 {
+        font-size: 38px;
+        line-height: 43px;
+        margin-bottom: 16px;
+    }
+    .banner_section p {
+        font-size: 22px;
+        line-height: 28px;
+    }
+    /*banner section css end*/
+    /*news section css start*/
+    .line_heading h3 {
+        font-size: 26px;
+        line-height: 29px;
+    }
+    .line_heading p {
+        font-size: 18px;
+        line-height: 24px;
+    }
+    .line_heading:before, .line_heading:after{
+        width: 120px;
+        height: 3px;
+    }
+    .line_heading:before{
+        margin-right: 15px;
+    }
+    .line_heading:after{
+        margin-left: 15px;
+    }
+    .news_section .news_content {
+        padding: 20px 15px;
+    }
+    .news_section .news_content .news_content_inner .news_content_text,
+    .news_section .news_content .news_content_inner {
+        padding: 15px;
+    }
+    /*news section css end*/
+    /*busniess section css end*/
+    .busniess_box .busniess_box_content {
+        padding: 15px;
+    }
+    .busniess_box .custom_col_text,
+    .busniess_box .custom_col_image {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+    .busniess_box .busniess_box_content:before {
+        top: 19px;
+        left: 19px;
+        right: -19px;
+        bottom: -19px;
+    }
+    .busniess_box.busniess_management_box .busniess_box_content:before {
+        top: 19px;
+        left: -19px;
+        right: 19px;
+        bottom: -19px;
+    }
+    .busniess_box.busniess_real_estate_box .busniess_box_content {
+        margin-bottom: 40px;
+    }
+    .busniess_box.busniess_real_estate_box {
+        margin-bottom: 20px;
+    }
+    /*busniess section css end*/
+}
+@media(max-width: 675px) {
+    .custom_col_4 {
+        -ms-flex: 0 0 100%;
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+    .trading_section, .news_section {
+        padding: 40px 0;
+    }
+    .banner_section {
+        padding-bottom: 60px;
+    }
+    .banner_section h1 {
+        font-size: 28px;
+        line-height: 32px;
+        margin-bottom: 16px;
+    }
+    .banner_section p {
+        font-size: 18px;
+        line-height: 24px;
+    }
+    .news_section .news_content .news_content_inner .news_content_text {
+        align-items: center;
+        justify-content: space-between;
+        flex-direction: column;
+    }
+    .news_section .news_content .news_table p {
+        font-size: 16px;
+        line-height: 28px;
+    }
+    .news_section .news_content .news_content_inner .news_content_text a {
+        margin-top: 10px;
+    }
+    .line_heading {
+        margin: 0 auto 40px;
+    }
+
+    .line_heading:before,
+    .line_heading:after{
+        width: 40%;
+        top: auto;
+        bottom: -15px;
+        margin: 0;
+    }
+    .line_heading:before{
+        right: 50%;
+    }
+    .line_heading:after{
+        left: 50%;
+    }
+    .trading_content a {
+        max-width: 250px;
+        height: 50px;
+        line-height: 50px;
+        font-size: 16px;
+    }
+    .contact_section .howto-contact-content {
+        padding: 0;
+    }
+}
